# Toolbox

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: generate_spirv_header.cmake
docs/: ngrid.md  vkcontext.md
enc_temp_folder/4de88970a946c4637f237994263fe9ab/: vkcontext.h
headers/: activation_functions.h  angular.h  autoencoder.h  cumulative_distribution_functions.h  datastructures.h  decisiontree.h  distributions.h  gbm.h  initlists.h  k_nearest.h  layer.h  log.h  memlog.h  mlp.h  naive_bayes.h  neuralnet.h  neuron.h  probability_density_functions.h  rnd.h  seed.h  svm.h  timelog.h  validate.h  vkcontext.h  vkdata.h  vknet.h  vkvec.h  vulkan_context.h  weight_init.h
include/: activation_functions.h  angular.h  asinh.comp  autoencoder.h  cdf.h  classification.h  datastructures.h  gbm.h  k_nearest.h  layer.h  log.h  memlog.h  mlp.h  mlp_enums.h  neuralnet.h  neuron.h  ngrid.h  pdf.h  renderdoc_enable.h  rnd.h  spirv_bin_precompiled.h  svm.h  timelog.h  validate.h  vkcontext.h  vknet.h  vkvec.h
other/: mlp.cpp  mlp_test.cpp  neuralnet.cpp  neuralnet_test.cpp  vknet_test.cpp  vktest.cpp  vulkan_test.cpp
other/glsl (outdated)/: abs.comp  acos.comp  acosh.comp  asinh.comp  ceil.comp  convolution.comp  cosh.comp  erase_row.comp  fill.comp  fill_dropout.comp  fill_identity.comp  find.comp  flatten.comp  greaterequals_other.comp  kurtosis.comp  linear_predict.comp  max_other.comp  max_value.comp  maxabs.comp  or_other.comp  outliers_minmax.comp  outliers_value_imputation.comp  remap.comp  replace_if_other.comp  resize.comp  scale_mean.comp  scale_standardized.comp  sign.comp  sort.comp  stationary.comp  tan.comp  tanh_drv.comp  upper_trigonal.comp  vknet_process.comp
other/include/: classification.h  datastructures.h  decisiontree.h  distributions.h  initlists.h  mlp.h  naive_bayes.h  neuralnet.h  neuron.h  validate.h  weight_init.h
other/src/: activation_functions.cpp  datastructures_test.cpp  mlp.cpp  mlp_test.cpp  neuralnet_test.cpp  vknet_test.cpp
resources/shaders/glsl/: abs.comp  acos.comp  acosh.comp  and_other.comp  asin.comp  atan.comp  atanh.comp  ceil.comp  clamp.comp  concatenate.comp  convolution.comp  cos.comp  cosh.comp  diagonal.comp  elu.comp  elu_drv.comp  erase_col.comp  even_odd_sort.comp  exp.comp  fill.comp  fill_He_ELU.comp  fill_dropout.comp  fill_he_elu.comp  fill_he_relu.comp  fill_identity.comp  fill_index.comp  fill_random_binary.comp  fill_random_gaussian.comp  fill_random_sign.comp  fill_random_uniform.comp  fill_random_uniform_int.comp  fill_range.comp  fill_xavier_normal.comp  fill_xavier_sigmoid.comp  fill_xavier_uniform.comp  fill_zero.comp  find.comp  floor.comp  greater_value.comp  greaterequals_value.comp  (+91 more)
shaders/glsl/: abs.comp  acos.comp  acosh.comp  and_other.comp  asin.comp  asinh.comp  atan.comp  atanh.comp  ceil.comp  concatenate.comp  convolution.comp  cos.comp  cosh.comp  diagonal.comp  elu.comp  elu_drv.comp  equals_other.comp  equals_value.comp  erase_col.comp  erase_depth.comp  erase_row.comp  exp.comp  fill.comp  fill_He_ELU.comp  fill_He_ReLU.comp  fill_Xavier_normal.comp  fill_Xavier_sigmoid.comp  fill_Xavier_uniform.comp  fill_dropout.comp  fill_identity.comp  fill_index.comp  fill_random_binary.comp  fill_random_gaussian.comp  fill_random_sign.comp  fill_random_uniform.comp  fill_random_uniform_int.comp  fill_range.comp  find.comp  flatten.comp  floor.comp  (+78 more)
shaders/spirv/: abs.spv  acos.spv  acosh.spv  and_other.spv  asin.spv  asinh.spv  atan.spv  atanh.spv  ceil.spv  concatenate.spv  convolution.spv  cos.spv  cosh.spv  diagonal.spv  elu.spv  elu_drv.spv  equals_other.spv  equals_value.spv  erase_col.spv  erase_depth.spv  erase_row.spv  exp.spv  fill.spv  fill_He_ELU.spv  fill_He_ReLU.spv  fill_Xavier_normal.spv  fill_Xavier_sigmoid.spv  fill_Xavier_uniform.spv  fill_dropout.spv  fill_identity.spv  fill_random_binary.spv  fill_random_gaussian.spv  fill_random_sign.spv  fill_random_uniform.spv  fill_random_uniform_int.spv  fill_range.spv  find.spv  flatten.spv  floor.spv  get_col.spv  (+85 more)
sources/: activation_functions.cpp  datastructures_test.cpp  neuralnet.cpp  vkdata_test.cpp  vkvec_test.cpp  vulkan_test.cpp
src/: main.cpp
